fixed spacing issue

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -98,7 +98,6 @@
     font-weight: 100;
     color: $cream;
     font-size: 22px;
-    width: 60px;
     margin-top: -50px;
     margin-left: 25px;
   }
